<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference
            android:key="setting_start_key"
            android:summary="@string/setting_start_text"
            android:title="@string/action_start" />
    <Preference
            android:key="setting_stop_key"
            android:summary="@string/setting_stop_text"
            android:title="@string/action_stop" />
    
    <CheckBoxPreference
        android:key="setting_iscoord_key"
        android:summary="@string/setting_iscoord_text"
        android:title="@string/setting_iscoord_title" android:defaultValue="@bool/setting_iscoord_def"/>
    <CheckBoxPreference
            android:key="setting_uihandler_key"
            android:summary="@string/setting_uihandler_text"
            android:title="@string/setting_uihandler_title" android:defaultValue="@bool/setting_uihandler_def"/>
    <CheckBoxPreference
            android:key="setting_connwifi_key"
            android:summary="@string/setting_connwifi_text"
            android:title="@string/setting_connwifi_title"  android:defaultValue="@bool/setting_connwifi_def"/>
	<Preference
            android:key="setting_resetwifi_key"
            android:summary="@string/setting_resetwifi_text"
            android:title="@string/setting_resetwifi_title" />

    <PreferenceCategory android:title="@string/folder_settings" >
        <EditTextPreference
            android:defaultValue="@string/setting_cfolder_def"
            android:dialogMessage="@string/setting_cfolder_instr"
            android:key="setting_cfolder_key"
            android:summary="@string/setting_cfolder_text"
            android:title="@string/setting_cfolder_title" />
        <EditTextPreference
            android:defaultValue="@string/setting_ofolder_def"
            android:dialogMessage="@string/setting_ofolder_instr"
            android:key="setting_ofolder_key"
            android:summary="@string/setting_ofolder_text"
            android:title="@string/setting_ofolder_title" />
        <EditTextPreference
            android:defaultValue="@string/setting_ifolder_def"
            android:dialogMessage="@string/setting_ifolder_instr"
            android:key="setting_ifolder_key"
            android:summary="@string/setting_ifolder_text"
            android:title="@string/setting_ifolder_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_settings" >
        <EditTextPreference
            android:defaultValue="@string/setting_user_def"
            android:dialogMessage="@string/setting_user_instr"
            android:key="setting_user_key"
            android:summary="@string/setting_user_text"
            android:title="@string/setting_user_title" />
        <ListPreference
            android:defaultValue="@integer/setting_type_def"
            android:entries="@array/setting_type_entries"
            android:entryValues="@array/setting_type_values"
            android:key="setting_type_key"
            android:summary="@string/setting_type_text"
            android:title="@string/setting_type_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/conn_settings" >
        <ListPreference
            android:entries="@array/setting_connmode_entries"
            android:entryValues="@array/setting_connmode_values"
            android:key="setting_connmode_key"
            android:summary="@string/setting_connmode_text"
            android:title="@string/setting_connmode_title" android:defaultValue="@integer/setting_connmode_def"/>
        <ListPreference
            android:entries="@array/setting_conntype_entries"
            android:entryValues="@array/setting_conntype_values"
            android:key="setting_conntype_key"
            android:summary="@string/setting_conntype_text"
            android:title="@string/setting_conntype_title" android:defaultValue="@integer/setting_conntype_def"/>
        <EditTextPreference
            android:defaultValue="@string/setting_connurl_def"
            android:dialogMessage="@string/setting_connurl_instr"
            android:key="setting_connurl_key"
            android:summary="@string/setting_connurl_text"
            android:title="@string/setting_connurl_title" />
        <EditTextPreference
            android:defaultValue="@string/setting_conngcm_def"
            android:dialogMessage="@string/setting_conngcm_instr"
            android:key="setting_conngcm_key"
            android:summary="@string/setting_conngcm_text"
            android:title="@string/setting_conngcm_title" />
        <EditTextPreference
            android:defaultValue="@string/setting_connusr_def"
            android:dialogMessage="@string/setting_connusr_instr"
            android:key="setting_connusr_key"
            android:summary="@string/setting_connusr_text"
            android:title="@string/setting_connusr_title" />
        <EditTextPreference
            android:defaultValue="@string/setting_connpwd_def"
            android:dialogMessage="@string/setting_connpwd_instr"
            android:key="setting_connpwd_key"
            android:summary="@string/setting_connpwd_text"
            android:title="@string/setting_connpwd_title" />
    </PreferenceCategory>
</PreferenceScreen>